--- a/test.html
+++ b/test.html
@@ -5,6 +5,12 @@
 	<title>Test Page</title>
 </head>
 <body>
+	<header>
+		<ul>
+			<li> Home </li>
+		</ul>
+	</header>
 	This is a test page.
+	<p> Hi this is ulrica, typing. </p>
 </body>
 </html>
