updated alamo square image, tried to make it fit into our grid system and make it responsive, but haven't been able to do so

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -11,7 +11,7 @@
     <div class="skrollr-wrapper">
     <section id="slide-0">
          <div class="slide-container">
-            <div class="bg"
+            <div class="bg bg-image"
                 data-top="opacity:1;"
                 data--1400-top="opacity:0;"
                 data-anchor-target="#slide-0"
@@ -24,37 +24,34 @@
         </div><!--slide container-->
     </section>
     <section id="slide-1">
-       <div class="slide-container">
-        <div class="slide row">
-            <div id="coit"
+       <div class="slide-container centered">
+        <div class="slide">
+            <div id="alamo" class="bg-image"
                 data-top="opacity:0; transform:translateY(1000px)"
-                data--1400-top="opacity:1; transform:translateY(0px)"
-                data-3500="opacity:1; transform:translateY(0px)"      
-                data-4000="opacity:1; transform:translateY(-1000px)"
+                data--500-top="opacity:1; transform:translateY(0px)"
+                data-1500="opacity:1; transform:translateY(0px)"      
+                data-2000="opacity:1; transform:translateY(-1500px)"
                 data-anchor-target="#slide-0"
-            ></div>
-            <div class="fog-1"
-                data-1124="opacity:0; transform:translateX(400px)"
-                data-2000="opacity:1; transform:translateX(-700px)"
-                data-3500="opacity:1; transform:translateX(-700px)"
-                data-4000="opacity:0; transform:translateX(-1400px)"
-                data-anchor-target="#slide-0"
-            ><img src="lib/images/cloud1.png"></div>
-            <div class="fog-2"
-                data-1600="opacity:0; transform:translateX(-400px)"
-                data-2200="opacity:1; transform:translateX(500px)"
-                data-3500="opacity:1; transform:translateX(500px)"
-                data-3800="opacity:1; transform:translateX(1500px)"
-                data-anchor-target="#slide-0"><img src="lib/images/cloud2.png"></div>
-            <div class="text col-xs-4"
-                data-2300="opacity:0; transform:translateX(0px)"
-                data-2500="opacity:1; transform:translateX(200px)"
-                data-3500="opacity:1; transform:translateX(200px)"
-                data-3800="opacity:0"
-                data-anchor-target="#slide-0">
+            >
+               <div class="text">
                 <h1>Some text</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p>
+                </div><!--text-->
             </div>
+            <div class="fog-1"
+                data-580="opacity:0; transform:translateX(300px)"
+                data-800="opacity:1; transform:translateX(-500px)"
+                data-950="opacity:1; transform:translateX(-500px)"
+                data-1150="opacity:0; transform:translateX(-800px)"
+                data-anchor-target="#slide-0"
+            ><img src="lib/images/fog01.png"></div>
+            <div class="fog-2"
+                data-700="opacity:0; transform:translateX(-400px)"
+                data-900="opacity:1; transform:translateX(500px)"
+                data-1100="opacity:1; transform:translateX(500px)"
+                data-1200="opacity:1; transform:translateX(1500px)"
+                data-anchor-target="#slide-0"><img src="lib/images/fog02.png"></div>
+
         </div><!--slide-->
         </div><!--slide-container-->
     </section><!--section 1-->
