--- a/main_page/index.html
+++ b/main_page/index.html
@@ -8,20 +8,17 @@
 <body>
    <nav class="menu">
 		<div class="menu-wrap">
-			<h1 class="logo"><a href="#home">Menu</a></h1>
-			<i class="icon-remove menu-close"></i>
-			<a href="#slide-0">Home</a>
+			<h1 class="logo"><a href="#slide-0">Fog of SF</a></h1>
 			<a href="#alamo">Alamo Square</a>
+			<a href="#embarcadero">Embarcadero</a>
 			<a href="#coit">Coit Tower</a>
 			<a href="#union">Union Square</a>
-			<a href="#embarcadero">Embarcadero</a>
 			<a href="#about">About</a>
 		</div>
-
 		<!-- Menu button -->
-		<div id="menuToggle"><i class="icon-reorder"></i></div>
-	</nav>
-
+		<div id="menuToggle">&Xi;</div>
+   </nav>
+<!--END OF NAV-->
     <div id="position-log">0</div>
     <div class="project-wrap">
     <div class="skrollr-wrapper">
@@ -46,7 +43,7 @@
                 data-top="opacity:0; transform:translateY(1000px)"
                 data--500-top="opacity:1; transform:translateY(0px)"
                 data-1500="opacity:1; transform:translateY(0px)"      
-                data-2000="opacity:1; transform:translateY(-1500px)"
+                data-2200="opacity:1; transform:translateY(-1500px)"
                 data-anchor-target="#slide-0"
             >
                <div class="text">
@@ -67,33 +64,40 @@
                 data-1100="opacity:1; transform:translateX(500px)"
                 data-1200="opacity:1; transform:translateX(1500px)"
                 data-anchor-target="#slide-0"><img src="lib/images/fog02.png"></div>
-
         </div><!--slide-->
         </div><!--slide-container-->
     </section><!--section 1-->
     <section id="slide-2">
-        <div class="bg"></div>
-        <div id="twin"
-            data-3600="opacity:0; transform:translateY(1000px)"
-            data-4500="opacity:1; transform:translateY(0px)"
-            data-anchor-target="#slide-2"
-        ></div>
-        <div class="fog-1"
-            data-4500="opacity:0; transform:translateX(400px)"
-            data-5000="opacity:1; transform:translateX(-700px)"
-            data-anchor-target="#slide-2"
-        ><img src="lib/images/cloud1.png"></div>
-        <div class="fog-2"
-            data-4990="opacity:0; transform:translateX(-400px)"
-            data-5300="opacity:1; transform:translateX(500px)"
-            data-anchor-target="#slide-2"><img src="lib/images/cloud2.png"></div>
-        <div class="text"
-            data-5320="opacity:0; transform:translateX(0px)"
-            data-6000="opacity:1; transform:translateX(200px)"
-            data-anchor-target="#slide-2">
-            <h1>Some text</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p></div>
-    </section>
+        <div class="slide-container centered">
+        <div class="slide">
+            <div id="embarcadero" class="bg-image"
+                data-1300="opacity:0; transform:translateY(1000px)"
+                data-1600="opacity:1; transform:translateY(0px)"
+                data-2500="opacity:1; transform:translateY(0px)"      
+                data-3300="opacity:1; transform:translateY(-1500px)"
+                data-anchor-target="#slide-0"
+            >
+               <div class="text">
+                <h1>Some text</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p>
+                </div><!--text-->
+            </div>
+            <div class="fog-1"
+                data-1700="opacity:0; transform:translateX(300px)"
+                data-2000="opacity:1; transform:translateX(-700px)"
+                data-2600="opacity:1; transform:translateX(-700px)"
+                data-3100="opacity:0; transform:translateX(-900px)"
+                data-anchor-target="#slide-0"
+            ><img src="lib/images/fog01.png"></div>
+            <div class="fog-2"
+                data-1900="opacity:0; transform:translateX(-400px)"
+                data-2200="opacity:1; transform:translateX(700px)"
+                data-2700="opacity:1; transform:translateX(700px)"
+                data-3150="opacity:1; transform:translateX(1500px)"
+                data-anchor-target="#slide-0"><img src="lib/images/fog02.png"></div>
+        </div><!--slide-->
+        </div><!--slide-container-->
+    </section><!--section 2-->
     </div><!--scrollr-wrapper-->
     </div><!--project wrap-->
     <script src="lib/js/jquery-1.11.1.min.js"></script>
@@ -104,11 +108,11 @@
                 //log current scroll position
                 $('#position-log').text(data.curTop);
             }
-        });
+        })
     </script>
     <script>
     // Menu settings
-			$('#menuToggle, .menu-close').on('click', function(){
+			$('#menuToggle').on('click', function(){
 				$('#menuToggle').toggleClass('active');
 				$('body').toggleClass('body-push-toleft');
 				$('.menu').toggleClass('menu-open');
