added copy, added section 3 coit tower, changed landing page image

--- a/fog/index.html
+++ b/fog/index.html
@@ -75,8 +75,8 @@
         <div class="slide-container centered">
         <div class="slide">
             <div id="embarcadero" class="bg-image"
-                data-1300="opacity:0; transform:translateY(1000px)"
-                data-1600="opacity:1; transform:translateY(0px)"
+                data-1500="opacity:0; transform:translateY(1000px)"
+                data-1800="opacity:1; transform:translateY(0px)"
                 data-2500="opacity:1; transform:translateY(0px)"      
                 data-3300="opacity:1; transform:translateY(-1500px)"
                 data-anchor-target="#slide-0"
@@ -104,7 +104,41 @@
                 data-anchor-target="#slide-0"><img src="lib/images/fog02.png"></div>
         </div><!--slide-->
         </div><!--slide-container-->
-    </section><!--section 2-->
+    </section><!--section 3-->
+    <section id="slide-3">
+        <div class="slide-container centered">
+        <div class="slide">
+            <div id="coit" class="bg-image"
+                data-2400="opacity:0; transform:translateY(1000px)"
+                data-2700="opacity:1; transform:translateY(0px)"
+                data-3700="opacity:1; transform:translateY(0px)"      
+                data-4500="opacity:1; transform:translateY(-1500px)"
+                data-anchor-target="#slide-0"
+            >
+               <div class="text">
+                <h1>Some text</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p>
+                </div><!--text-->
+                <div class="landmark">
+                 <img src="lib/images/coit.png" alt="coittower">
+               </div><!--landmark-->
+            </div>
+            <div class="fog-1"
+                data-3000="opacity:0; transform:translateX(300px)"
+                data-3400="opacity:1; transform:translateX(-700px)"
+                data-4000="opacity:1; transform:translateX(-700px)"
+                data-4300="opacity:0; transform:translateX(-900px)"
+                data-anchor-target="#slide-0"
+            ><img src="lib/images/fog01.png"></div>
+            <div class="fog-2"
+                data-3200="opacity:0; transform:translateX(-400px)"
+                data-3550="opacity:1; transform:translateX(700px)"
+                data-4100="opacity:1; transform:translateX(700px)"
+                data-4400="opacity:1; transform:translateX(1500px)"
+                data-anchor-target="#slide-0"><img src="lib/images/fog02.png"></div>
+        </div><!--slide-->
+        </div><!--slide-container-->
+    </section><!--section 3-->
     </div><!--scrollr-wrapper-->
     </div><!--project wrap-->
     <script src="lib/js/jquery-1.11.1.min.js"></script>
