solved conflict with Beb

--- a/fog/index.html
+++ b/fog/index.html
@@ -86,9 +86,16 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p>
                 </div><!--text-->
                 <div class="landmark">
-                 <img src="lib/images/embacadero.png" alt="embarcadero">
+                 <img src="lib/images/embarcadero.png" alt="embarcadero">
                </div><!--landmark-->
             </div>
+            <div class="item"
+                data-1600="opacity:0; transform:translateY(1000px)"
+                data-2000="opacity:1; transform:translateY(0px)"
+                data-2500="opacity:1; transform:translateY(0px)"
+                data-3300="opacity:0; transform:translateY(-1500px)"
+                data-anchor-target="#slide-0"
+            ><img src="lib/images/embarcadero-item.png"></div>
             <div class="fog-1"
                 data-1700="opacity:0; transform:translateX(300px)"
                 data-2000="opacity:1; transform:translateX(-700px)"
@@ -120,9 +127,16 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p>
                 </div><!--text-->
                 <div class="landmark">
-                 <img src="lib/images/coit.png" alt="coittower">
+                 <img src="lib/images/coit-2.png" alt="coittower">
                </div><!--landmark-->
             </div>
+            <div class="item"
+                data-2600="opacity:0; transform:translateY(1000px)"
+                data-3000="opacity:1; transform:translateY(0px)"
+                data-3700="opacity:1; transform:translateY(0px)"
+                data-4500="opacity:0; transform:translateY(-1500px)"
+                data-anchor-target="#slide-0"
+            ><img src="lib/images/coit-item.png"></div>
             <div class="fog-1"
                 data-3000="opacity:0; transform:translateX(300px)"
                 data-3400="opacity:1; transform:translateX(-700px)"
