Updated all illustration images, added one button, updated headline

--- a/fog/index.html
+++ b/fog/index.html
@@ -14,7 +14,6 @@
 			<a href="#embarcadero">Embarcadero</a>
 			<a href="#coit">Coit Tower</a>
 			<a href="#union">Union Square</a>
-			<a href="#about">About</a>
 		</div>
 		<!-- Menu button -->
 		<div id="menuToggle">&Xi;</div>
@@ -25,7 +24,7 @@
     <div class="skrollr-wrapper">
     <section id="slide-0">
          <div class="slide-container">
-            <div class="bg bg-image"
+            <div class="bg"
                 data-top="opacity:1;"
                 data--1400-top="opacity:0;"
                 data-anchor-target="#slide-0"
@@ -48,8 +47,8 @@
                 data-anchor-target="#slide-0"
             >
                <div class="text">
-                <h1>Some text</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p>
+                <h1>Alamo Square</h1>
+                <a class="btn">Learn More</a>
                 </div><!--text-->
                <div class="landmark">
                  <img src="lib/images/alamo-new.png" alt="alamo">
@@ -82,8 +81,7 @@
                 data-anchor-target="#slide-0"
             >
                <div class="text">
-                <h1>Some text</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p>
+                <h1>Embacadero</h1>
                 </div><!--text-->
                 <div class="landmark">
                  <img src="lib/images/embarcadero.png" alt="embarcadero">
@@ -111,7 +109,7 @@
                 data-anchor-target="#slide-0"><img src="lib/images/fog02.png"></div>
         </div><!--slide-->
         </div><!--slide-container-->
-    </section><!--section 3-->
+    </section><!--section 2-->
     <section id="slide-3">
         <div class="slide-container centered">
         <div class="slide">
@@ -123,8 +121,7 @@
                 data-anchor-target="#slide-0"
             >
                <div class="text">
-                <h1>Some text</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque tempor sem in consequat. Fusce facilisis vestibulum arcu vitae eleifend. Donec ac felis urna.</p>
+                <h1>Coit tower</h1>
                 </div><!--text-->
                 <div class="landmark">
                  <img src="lib/images/coit-2.png" alt="coittower">
@@ -153,6 +150,39 @@
         </div><!--slide-->
         </div><!--slide-container-->
     </section><!--section 3-->
+    <section id="slide-4">
+        <div class="slide-container centered">
+        <div class="slide">
+            <div id="palace" class="bg-image"
+                data-3600="opacity:0; transform:translateY(1000px)"
+                data-3900="opacity:1; transform:translateY(0px)"
+                data-4900="opacity:1; transform:translateY(0px)"      
+                data-5700="opacity:1; transform:translateY(-1500px)"
+                data-anchor-target="#slide-0"
+            >
+               <div class="text">
+                <h1>Palace of Fine Art</h1>
+                </div><!--text-->
+                <div class="landmark">
+                 <img src="lib/images/palace.png" alt="palaceoffineart">
+                </div><!--landmark-->
+            </div>
+            <div class="fog-1"
+                data-3000="opacity:0; transform:translateX(300px)"
+                data-3400="opacity:1; transform:translateX(-700px)"
+                data-4000="opacity:1; transform:translateX(-700px)"
+                data-4300="opacity:0; transform:translateX(-900px)"
+                data-anchor-target="#slide-0"
+            ><img src="lib/images/fog01.png"></div>
+            <div class="fog-2"
+                data-3200="opacity:0; transform:translateX(-400px)"
+                data-3550="opacity:1; transform:translateX(700px)"
+                data-4100="opacity:1; transform:translateX(700px)"
+                data-4400="opacity:1; transform:translateX(1500px)"
+                data-anchor-target="#slide-0"><img src="lib/images/fog02.png"></div>
+        </div><!--slide-->
+        </div><!--slide-container-->
+    </section><!--section 4-->
     </div><!--scrollr-wrapper-->
     </div><!--project wrap-->
     <script src="lib/js/jquery-1.11.1.min.js"></script>
