Added innner pages

--- a/fog/index.html
+++ b/fog/index.html
@@ -29,7 +29,7 @@
                     data-1000="opacity:0;transform:translateY(1500px)"
                     data-anchor-target="#home"
                 ></div>
-                <div id="title"
+                <div class="title"
                 data-top="transform:translateY(0px)"
                 data--550-top="transform:translateY(-1000px)"
                 data-anchor-target="#home"
@@ -48,7 +48,7 @@
                 >
                    <div class="text">
                     <h1>Alamo Square</h1>
-                    <a class="btn">Learn More</a>
+                    <a class="btn" href="landmarks/alamo.html">Learn More</a>
                     </div><!--text-->
                    <div class="landmark">
                      <img src="lib/images/alamo-new.png" alt="alamo">
@@ -82,7 +82,7 @@
                 >
                    <div class="text">
                     <h1>Embacadero</h1>
-                    <a class="btn">Learn More</a>
+                    <a class="btn" href="landmarks/embarcadero.html">Learn More</a>
                     </div><!--text-->
                     <div class="landmark">
                      <img src="lib/images/embarcadero.png" alt="embarcadero">
@@ -123,7 +123,7 @@
                 >
                    <div class="text">
                     <h1>Coit tower</h1>
-                    <a class="btn">Learn More</a>
+                    <a class="btn" href="landmarks/coit.html">Learn More</a>
                     </div><!--text-->
                     <div class="landmark">
                      <img src="lib/images/coit-2.png" alt="coittower">
@@ -164,7 +164,7 @@
                 >
                    <div class="text">
                     <h1>Palace of Fine Art</h1>
-                    <a class="btn">Learn More</a>
+                    <a class="btn" href="landmarks/palace.html">Learn More</a>
                     </div><!--text-->
                     <div class="landmark">
                      <img src="lib/images/palace.png" alt="palaceoffineart">
