--- a/fog/index.html
+++ b/fog/index.html
@@ -191,8 +191,9 @@
     <script src="lib/js/jquery-1.11.1.min.js"></script>
     <script src="lib/js/enquire.js"></script>
     <script src="lib/js/skrollr.min.js"></script>
+    <script src="lib/js/modernizr.min.js"></script>
 <!--    <script src="lib/js/skrollr.menu.min.js"></script>-->
-    <script src="lib/js/main.js"></script>
+<!--    <script src="lib/js/main.js"></script>-->
     <script>
     // Init Skrollr
     var s = skrollr.init(
