more updates and stylistic changesto the project

--- a/fog/landmarks/embarcadero.html
+++ b/fog/landmarks/embarcadero.html
@@ -23,7 +23,7 @@
                     data-4000="transform:scale(1.4) translateX(-450px);"
                     data-anchor-target="#embarcadero-home"
                 ><img src="../lib/images/embarcadero-inner.jpg"></div>
-                <a class="btn" href="../index.html">Go Back</a>
+                <a class="btn" href="../index.html"><i class="sf sf-left-arrow backicon"></i> Go Back</a>
                 <div class="text"
                     data-top="opacity:0; transform:translateY(0px);"
                     data-1000="opacity:0.8; transform:translateY(-100px);"
