--- a/fog/index.html
+++ b/fog/index.html
@@ -44,11 +44,13 @@
                 data-top="transform:translateY(0px)"
                 data--550-top="transform:translateY(-1000px)"
                 data-anchor-target="#home">
-                <p>The Fog of</p><h1>San Francisco</h1>
+                <p class="fogtitle">The Fog of</p><h1>San Francisco</h1>
+                <div id="indexicons">
                 <a href="#alamo"><i class="sf sf-painted-ladies sf-fw homeicon"></i></a>
                 <a href="#embarcadero"><i class="sf sf-embarcadero sf-fw homeicon"></i></a>
                 <a href="#coit"><i class="sf sf-coit-tower sf-fw homeicon"></i></a>
                 <a href="#palace"><i class="sf sf-palace-of-fine-arts sf-fw homeicon"></i></a></div>
+                </div>
             </div><!--slide container-->
         </section>
         <section id="slide-1">
