more stylistic changes and testing out a version of Ulricas Palace of Fine Arts landmark page with some changes to make it feel like less text. Also added adams map idea on that page with a slight to the overall code and using the same menu plugin as the top down menu

--- a/fog/landmarks/coit.html
+++ b/fog/landmarks/coit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fog of San Francisco</title>
+    <title>The Fog of San Francisco</title>
     <link rel="stylesheet" href="../lib/css/style.css">
     <style>
     html, body{
