--- a/fog/landmarks/embarcadero.html
+++ b/fog/landmarks/embarcadero.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fog of San Francisco</title>
+    <title>The Fog of San Francisco</title>
     <link rel="stylesheet" href="../lib/css/style.css">
     <style>
     html, body{
