word change on palace page

--- a/fog/landmarks/palace.html
+++ b/fog/landmarks/palace.html
@@ -66,7 +66,7 @@
                         <o>  A picnic is a nice addition to this artsy day. Pack up some food and drink and enjoy a day in the park with the kids. Because you’ll be going inside and out, you’ll want to bring layers to be prepared for all weather conditions. Snacks and a camera are also recommended.</p>
                     
                         <h6><i class="sf sf-right-arrow infoicon"></i> Map</h6>
-                        <a href="#" class="toggle-map menu-bottom">Click to see the location on a map</h6></a>
+                        <a href="#" class="toggle-map menu-bottom">Click to see this location on a map</h6></a>
                         <div class="cbp-spmenu-bottom cbp-spmenu-horizontal cbp-spmenu-bottom cbp-spmenu">
 
                         <div class="toggle-map menu-bottom menu_close"><i class="sf sf-down-arrow sf-fw downarrow"></i> Close Map <i class="sf sf-down-arrow sf-fw downarrow"></i></div>
