updated 2 landmark pages

--- a/fog/landmarks/palace.html
+++ b/fog/landmarks/palace.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../lib/css/style.css">
     <style>
     html, body{
-        height:4000px !important;
+        height:1000px !important;
     }
     </style>
 </head>
@@ -59,11 +59,11 @@
                     </div>
 
                     <div class=" col-5 offset-2">
-                          <h6><i class="sf sf-right-arrow infoicon"></i> Public Transport  </h6>
+                          <h6><i class="sf sf-right-arrow infoicon"></i> Public Transportation </h6>
                         <p>  The Palace of Fine Arts is easily accessible by San Francisco Muni buses #30, #43, #28, and #29. Muni bus lines #22, #41, and #45 also stop in the vicinity. From Fisherman’s Wharf take the #30 Stockton bus. For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
 
-                        <h6><i class="sf sf-right-arrow infoicon"></i> What to bring and wear </h6>
-                        <o>  A picnic is a nice addition to this artsy day. Pack up some food and drink and enjoy a day in the park with the kids. Because you’ll be going inside and out, you’ll want to bring layers to be prepared for all weather conditions. Snacks and a camera are also recommended.</p>
+                        <h6><i class="sf sf-right-arrow infoicon"></i> What to bring and what to wear </h6>
+                        <p>  A picnic is a nice addition to this artsy day. Pack up some food and drink and enjoy a day in the park with the kids. Because you’ll be going inside and out, you’ll want to bring layers to be prepared for all weather conditions. Snacks and a camera are also recommended.</p>
                     
                         <h6><i class="sf sf-right-arrow infoicon"></i> Map</h6>
                         <a href="#" class="toggle-map menu-bottom">Click to see this location on a map</h6></a>
