updated other 2 landmark pages

--- a/fog/landmarks/coit.html
+++ b/fog/landmarks/coit.html
@@ -29,9 +29,9 @@
                     <h1 class="neighborhoodtitle"><i class="sf sf-coit-tower nbhdicon"></i> Coit Tower</h1>
                     <div class="neighborhood">
                     <ul class="sf-ul">
-                    <li class="neighborhooddesc"><i class="sf-li sf sf-right-arrow sf-fw listicon"></i>There is a miniature version of the Palace of Fine Arts at the California adventure amusement park.</li>
-                    <li class="neighborhooddesc"><i class="sf-li sf sf-right-arrow sf-fw listicon"></i>The Exploratorium was previously in the location of the former event hall that was built in 1969.</li>
-                    <li class="neighborhooddesc"><i class="sf-li sf sf-right-arrow sf-fw listicon"></i>The lagoon is artificial and was designed for the specific purpose of the Palace of Fine Arts.</li>
+                    <li class="neighborhooddesc"><i class="sf-li sf sf-right-arrow sf-fw listicon"></i>Categorized as Art Deco architecture.</li>
+                    <li class="neighborhooddesc"><i class="sf-li sf sf-right-arrow sf-fw listicon"></i>Rumor has it that it’s supposed to represent a firehose nozzle but has been shot down as being false.</li>
+                    <li class="neighborhooddesc"><i class="sf-li sf sf-right-arrow sf-fw listicon"></i>It was built in honor for the firefighters of San Francisco funded by Lillian Hitchcock Coit.</li>
                     </ul>
                     </div>
                 </div> <!--closed container -->
@@ -42,14 +42,14 @@
                     <div class=" col-5">
                         <div class="col-12">
                             <h6><i class="sf sf-right-arrow infoicon"></i> When to Go </h6>
-                             <p> The Palace of Fine Arts is a fantastic place to hang out for an hour or more throughout the year, from sunrise to sunset. </p>
+                             <p> Coit Tower is a fantastic place to to take in breath taking views. You can go during the day or late evening to see the sunset. </p>
                       
 
                         </div>
 
                         <div class="col-12">
                         <h6><i class="sf sf-right-arrow infoicon"></i> How to Get There </h6>
-                        <p> The Palace of Fine Arts Theater is located at 3301 Lyon Street in San Francisco. For directions from different parts of the Bay Area, <a href="#"> click here. </a> </p>
+                        <p> Coit tower located at 1 Telegraph Hill Blvd in San Francisco. For directions from different parts of the Bay Area, <a href="#"> click here. </a> </p>
                         </div>
                         <div class="col-12">
                         <h6><i class="sf sf-right-arrow infoicon"></i> Where to Park </h6>
@@ -60,9 +60,9 @@
 
                     <div class=" col-5 offset-2">
                           <h6><i class="sf sf-right-arrow infoicon"></i> Public Transportation </h6>
-                        <p>  The Palace of Fine Arts is easily accessible by San Francisco Muni buses #30, #43, #28, and #29. Muni bus lines #22, #41, and #45 also stop in the vicinity. From Fisherman’s Wharf take the #30 Stockton bus. For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
+                        <p>  Coit Tower is easily accessible by San Francisco Muni buses #30, #43, #28, and #29. Muni bus lines #22, #41, and #45 also stop in the vicinity. From Fisherman’s Wharf take the #30 Stockton bus. For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
 
-                        <h6><i class="sf sf-right-arrow infoicon"></i> What to bring and wear </h6>
+                        <h6><i class="sf sf-right-arrow infoicon"></i> What to bring and what to wear </h6>
                         <p>  A picnic is a nice addition to this artsy day. Pack up some food and drink and enjoy a day in the park with the kids. Because you’ll be going inside and out, you’ll want to bring layers to be prepared for all weather conditions. Snacks and a camera are also recommended.</p>
                     
                         <h6><i class="sf sf-right-arrow infoicon"></i> Map</h6>
