--- a/fog/landmarks/embarcadero.html
+++ b/fog/landmarks/embarcadero.html
@@ -53,16 +53,16 @@
                         </div>
                         <div class="col-12">
                         <h6><i class="sf sf-right-arrow infoicon"></i> Where to Park </h6>
-                        <p>  Free parking is available along Palace Drive, Yacht Drive, and on Bay and Lyon streets but expect weekends to be crowded. </p>
+                        <p> If you plan to drive, parking is generally available along The Embarcadero on Saturdays. There are also nearby lots, like at Bryant and The Embarcadero. Please CHECK THE METERS CAREFULLY – some are only for 2 hours at a time.</p>
                         </div>
                        
                     </div>
 
                     <div class=" col-5 offset-2">
                           <h6><i class="sf sf-right-arrow infoicon"></i> Public Transportation </h6>
-                        <p>  The Palace of Fine Arts is easily accessible by San Francisco Muni buses #30, #43, #28, and #29. Muni bus lines #22, #41, and #45 also stop in the vicinity. From Fisherman’s Wharf take the #30 Stockton bus. For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
+                        <p>  Public transportation is your best bet. Any of the Muni metro line that travel towards market street can take you to The Embaracdero. There are multiple BART stops along Market, which is also served by the F Line and other busses. For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
 
-                        <h6><i class="sf sf-right-arrow infoicon"></i> What to bring and wear </h6>
+                        <h6><i class="sf sf-right-arrow infoicon"></i> What to bring and what to wear</h6>
                         <p>  A picnic is a nice addition to this artsy day. Pack up some food and drink and enjoy a day in the park with the kids. Because you’ll be going inside and out, you’ll want to bring layers to be prepared for all weather conditions. Snacks and a camera are also recommended.</p>
                     
                         <h6><i class="sf sf-right-arrow infoicon"></i> Map</h6>
